<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <ImageView
        android:contentDescription="@string/contentdescription_body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/image_body"
        android:src="@drawable/body"
        android:layout_centerHorizontal="true"
        android:visibility="visible"/>
    <ImageView
        android:contentDescription="@string/contentdescription_arms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/image_arms"
        android:src="@drawable/arms"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"/>
    <ImageView
        android:contentDescription="@string/contentdescription_ears"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/image_ears"
        android:src="@drawable/ears"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"/>
    <ImageView
        android:contentDescription="@string/contentdescription_eyebrows"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/image_eyebrows"
        android:src="@drawable/eyebrows"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"/>
    <ImageView
        android:contentDescription="@string/contentdescription_eyes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/image_eyes"
        android:src="@drawable/eyes"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"/>
    <ImageView
        android:contentDescription="@string/contentdescription_glasses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/image_glasses"
        android:src="@drawable/glasses"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"/>
    <ImageView
        android:contentDescription="@string/contentdescription_hat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/image_hat"
        android:src="@drawable/hat"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"/>
    <ImageView
        android:contentDescription="@string/contentdescription_mouth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/image_mouth"
        android:src="@drawable/mouth"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"/>
    <ImageView
        android:contentDescription="@string/contentdescription_mustache"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/image_mustache"
        android:src="@drawable/mustache"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"/>
    <ImageView
        android:contentDescription="@string/contentdescription_nose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/image_nose"
        android:src="@drawable/nose"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"/>
    <ImageView
        android:contentDescription="@string/contentdescription_shoes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/image_shoes"
        android:src="@drawable/shoes"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"/>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image_body"
        android:orientation="vertical"
        android:rowCount="4">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_name_arms"
            android:id="@+id/checkbox_arms"
            android:onClick="checkbox_arms_clicked"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_name_ears"
            android:id="@+id/checkbox_ears"
            android:onClick="checkbox_ears_clicked"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_name_eyebrows"
            android:id="@+id/checkbox_eyebrows"
            android:onClick="checkbox_eyebrows_clicked"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_name_eyes"
            android:id="@+id/checkbox_eyes"
            android:onClick="checkbox_eyes_clicked"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_name_glasses"
            android:id="@+id/checkbox_glasses"
            android:onClick="checkbox_glasses_clicked"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_name_hat"
            android:id="@+id/checkbox_hat"
            android:onClick="checkbox_hat_clicked"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_name_mouth"
            android:id="@+id/checkbox_mouth"
            android:onClick="checkbox_mouth_clicked"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_name_mustache"
            android:id="@+id/checkbox_mustache"
            android:onClick="checkbox_mustache_clicked"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_name_nose"
            android:id="@+id/checkbox_nose"
            android:onClick="checkbox_nose_clicked"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_name_shoes"
            android:id="@+id/checkbox_shoes"
            android:onClick="checkbox_shoes_clicked"/>
    </GridLayout>
</RelativeLayout>

